# stock-logistics-workflow

./: README.md
.oca/oca-port/blacklist/: stock_partner_delivery_window.json
setup/_metapackage/: pyproject.toml
stock_account_product_run_fifo_hook/: README.rst  __manifest__.py  hooks.py
stock_account_product_run_fifo_hook/i18n/: es.po  it.po  stock_account_product_run_fifo_hook.pot
stock_account_product_run_fifo_hook/static/description/: index.html
stock_partner_delivery_window/: README.rst  __manifest__.py
stock_partner_delivery_window/models/: delivery_time_window.py  res_partner.py  stock_picking.py
stock_partner_delivery_window/readme/: CONFIGURE.md  CONTRIBUTORS.md  CREDITS.md  DESCRIPTION.md
stock_partner_delivery_window/static/description/: index.html
stock_partner_delivery_window/tests/: test_delivery_window.py
stock_partner_delivery_window/views/: res_partner.xml
