[project]
name = "odoo-addons-oca-stock-logistics-workflow"
version = "18.0.20241218.0"
dependencies = [
    "odoo-addon-stock_account_product_run_fifo_hook==18.0.*",
    "odoo-addon-stock_no_negative==18.0.*",
    "odoo-addon-stock_picking_sale_order_link==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
